Fixed saving conversation state, added missing message metadata, fixed message temporary id logic, added observable subscription executor to internal config, tests for managing conversations, participants and messages.

--- a/COMAPI/chat/build.gradle
+++ b/COMAPI/chat/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     testCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
 
     // Comapi
+    // to get latest ./gradlew --refresh-dependencies
     compile 'com.github.comapi:comapi-sdk-android:dev-SNAPSHOT'
 }
 
