tests and the test coverage

--- a/COMAPI/chat/build.gradle
+++ b/COMAPI/chat/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 
 apply plugin: 'com.android.library'
 apply plugin: 'com.neenbedankt.android-apt'
+apply from: 'code_coverage.gradle'
 
 android {
     compileSdkVersion 25
@@ -25,12 +26,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            testCoverageEnabled = false
+            testCoverageEnabled = true
         }
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            testCoverageEnabled = false
+            testCoverageEnabled = true
         }
     }
     lintOptions {
