cleanup and comments

--- a/COMAPI/chat/src/main/AndroidManifest.xml
+++ b/COMAPI/chat/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
 
     package="com.comapi.chat">
 
-    <application android:allowBackup="true"
+    <application
+        android:allowBackup="true"
         android:supportsRtl="true">
 
     </application>
