--- a/COMAPI/chat/build.gradle
+++ b/COMAPI/chat/build.gradle
@@ -26,12 +26,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            testCoverageEnabled = true
+            testCoverageEnabled = false
         }
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            testCoverageEnabled = true
+            testCoverageEnabled = false
         }
     }
     lintOptions {
@@ -60,9 +60,7 @@ dependencies {
     androidTestCompile 'com.android.support.test:rules:0.5'
     testCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
 
-    // Comapi
-    // to get latest ./gradlew --refresh-dependencies
-    compile 'com.github.comapi:comapi-sdk-android:dev-SNAPSHOT'
+    compile 'com.comapi:foundation:1.0.2'
 }
 
 apply plugin: 'me.tatarka.retrolambda'
