--- a/COMAPI/chat/build.gradle
+++ b/COMAPI/chat/build.gradle
@@ -13,14 +13,14 @@ apply from: 'version.gradle'
 apply from: 'code_coverage.gradle'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 26
+        versionCode 2
+        versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -48,12 +48,15 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    testCompile 'junit:junit:4.12'
-    provided 'com.google.auto.value:auto-value:1.3'
-    apt 'com.google.auto.value:auto-value:1.3'
+    /* Android */
+    compile 'com.android.support:appcompat-v7:26.0.1'
+
+    provided 'com.google.auto.value:auto-value:1.5'
+    apt 'com.google.auto.value:auto-value:1.5'
     apt 'com.ryanharter.auto.value:auto-value-parcel:0.2.5'
+
     /* testing */
+    testCompile 'junit:junit:4.12'
     testCompile 'org.robolectric:robolectric:3.1.2'
     testCompile 'org.robolectric:shadows-play-services:3.1.2'
     testCompile 'org.robolectric:shadows-support-v4:3.1.2'
@@ -61,7 +64,7 @@ dependencies {
     androidTestCompile 'com.android.support.test:rules:0.5'
     testCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
 
-    compile 'com.comapi:foundation:1.0.2'
+    compile 'com.comapi:foundation:1.1.1'
 }
 
 
