sync on socket reconnects, updated dependencies

--- a/COMAPI/settings.gradle
+++ b/COMAPI/settings.gradle
@@ -1,1 +1,2 @@
-include ':chat'
+include ':chat'//, ':foundation'
+//project(':foundation').projectDir = new File('/Users/marcinswierczek/GitHub/comapi-sdk-android/COMAPI/foundation')
