--- a/COMAPI/build.gradle
+++ b/COMAPI/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
     dependencies {
 
@@ -26,6 +27,7 @@ allprojects {
         maven { url 'http://clojars.org/repo' }
         maven { url "https://jitpack.io" }
         maven { url 'https://maven.google.com' }
+        maven { url "https://jitpack.io" }
     }
 }
 
