--- a/COMAPI/chat/build.gradle
+++ b/COMAPI/chat/build.gradle
@@ -1,14 +1,4 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-    }
-}
-
 apply plugin: 'com.android.library'
-apply plugin: 'com.neenbedankt.android-apt'
 apply from: 'version.gradle'
 apply from: 'code_coverage.gradle'
 
@@ -49,22 +39,22 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     /* Android */
-    compile 'com.android.support:appcompat-v7:26.0.1'
+    compile 'com.android.support:appcompat-v7:26.1.0'
 
     provided 'com.google.auto.value:auto-value:1.5'
-    apt 'com.google.auto.value:auto-value:1.5'
-    apt 'com.ryanharter.auto.value:auto-value-parcel:0.2.5'
+    annotationProcessor 'com.google.auto.value:auto-value:1.5'
+    annotationProcessor 'com.ryanharter.auto.value:auto-value-parcel:0.2.5'
 
     /* testing */
     testCompile 'junit:junit:4.12'
-    testCompile 'org.robolectric:robolectric:3.1.2'
-    testCompile 'org.robolectric:shadows-play-services:3.1.2'
-    testCompile 'org.robolectric:shadows-support-v4:3.1.2'
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support.test:rules:0.5'
-    testCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
+    testCompile 'org.robolectric:robolectric:3.2.2'
+    testCompile 'org.robolectric:shadows-play-services:3.2.2'
+    testCompile 'org.robolectric:shadows-support-v4:3.2.2'
+    androidTestCompile 'com.android.support.test:runner:1.0.1'
+    androidTestCompile 'com.android.support.test:rules:1.0.1'
+    testCompile 'com.squareup.okhttp3:mockwebserver:3.9.0'
 
-    compile 'com.comapi:foundation:1.1.1'
+    compile 'com.github.comapi:comapi-sdk-android:dev-SNAPSHOT'
 }
 
 
