--- a/COMAPI/gradle/wrapper/gradle-wrapper.properties
+++ b/COMAPI/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Oct 21 11:34:03 PDT 2015
+#Mon Nov 13 12:41:37 CET 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
