--- a/COMAPI/chat/src/main/AndroidManifest.xml
+++ b/COMAPI/chat/src/main/AndroidManifest.xml
@@ -18,14 +18,6 @@
   ~ WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
-    package="com.comapi.chat">
-
-    <application
-        android:allowBackup="true"
-        android:supportsRtl="true">
-
-    </application>
-
+<manifest package="com.comapi.chat">
+    <application/>
 </manifest>
