--- a/COMAPI/chat/build.gradle
+++ b/COMAPI/chat/build.gradle
@@ -3,12 +3,12 @@ apply from: 'version.gradle'
 apply from: 'code_coverage.gradle'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 28
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 2
         versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -37,24 +37,32 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    /* Android */
-    compile 'com.android.support:appcompat-v7:26.1.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    provided 'com.google.auto.value:auto-value:1.5'
-    annotationProcessor 'com.google.auto.value:auto-value:1.5'
+    implementation 'com.android.support:support-annotations:28.0.0-alpha3'
+
+    compileOnly 'com.google.auto.value:auto-value:1.5.2'
+    annotationProcessor 'com.google.auto.value:auto-value:1.5.2'
     annotationProcessor 'com.ryanharter.auto.value:auto-value-parcel:0.2.5'
 
-    /* testing */
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.robolectric:robolectric:3.2.2'
-    testCompile 'org.robolectric:shadows-play-services:3.2.2'
-    testCompile 'org.robolectric:shadows-support-v4:3.2.2'
-    androidTestCompile 'com.android.support.test:runner:1.0.1'
-    androidTestCompile 'com.android.support.test:rules:1.0.1'
-    testCompile 'com.squareup.okhttp3:mockwebserver:3.9.0'
+    /* Rx */
+    implementation 'io.reactivex:rxjava:1.3.3'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
+    //noinspection GradleDependency same version as in com.squareup.retrofit2:converter-gson:2.3.0
+    implementation 'com.google.code.gson:gson:2.7'
 
-    compile 'com.comapi:foundation:1.2.0'
+    /* testing */
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.robolectric:robolectric:3.4.2'
+    testImplementation 'org.robolectric:shadows-play-services:3.3.2'
+    testImplementation 'org.robolectric:shadows-support-v4:3.3.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:3.9.0'
+
+    implementation fileTree(include: ['comapi:foundation'], dir: '/Users/marcinswierczek/GitHub/comapi-sdk-android/COMAPI')
+    implementation project(':foundation')
 }
 
 
