dependency update, closing client

--- a/COMAPI/chat/code_coverage.gradle
+++ b/COMAPI/chat/code_coverage.gradle
@@ -66,12 +66,15 @@ task jacocoTestReport(type: JacocoReport, dependsOn: "testDebugUnitTest") {
             classesPath = 'chat/build/intermediates/classes/debug'
         }
 
-        new File(classesPath).eachFileRecurse { file ->
-            if (file.name.contains('$$')) {
-                def oldPath = file.path
-                def newPath = oldPath.replace('$$', '$')
-                file.renameTo(newPath)
-                renamedFilesMap[newPath] = oldPath
+        File dir = new File(classesPath)
+        if (dir.exists()) {
+            dir.eachFileRecurse { file ->
+                if (file.name.contains('$$')) {
+                    def oldPath = file.path
+                    def newPath = oldPath.replace('$$', '$')
+                    file.renameTo(newPath)
+                    renamedFilesMap[newPath] = oldPath
+                }
             }
         }
     }
