--- a/COMAPI/chat/build.gradle
+++ b/COMAPI/chat/build.gradle
@@ -39,7 +39,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    implementation 'com.android.support:support-annotations:28.0.0-alpha3'
+    implementation 'com.android.support:support-annotations:28.0.0-rc01'
 
     compileOnly 'com.google.auto.value:auto-value:1.5.2'
     annotationProcessor 'com.google.auto.value:auto-value:1.5.2'
@@ -85,6 +85,11 @@ def localReleaseDest = "${buildDir}/release/${version}"
 task androidJavadocs(type: Javadoc, overwrite: true) {
     source = android.sourceSets.main.java.srcDirs
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    options.links("http://docs.oracle.com/javase/7/docs/api/")
+    options.linksOffline "http://d.android.com/reference","${android.sdkDirectory}/docs/reference"
+    exclude '**/BuildConfig.java'
+    exclude '**/R.java'
+    failOnError = false
 }
 
 task androidJavadocsJar(type: Jar, dependsOn: androidJavadocs) {
