--- a/COMAPI/chat/version.gradle
+++ b/COMAPI/chat/version.gradle
@@ -5,13 +5,11 @@
 */
 
 ext.chatVersion = '1.1.0'
+def foundationMaven = System.getenv("foundationmaven")
+ext.foundationFromMaven = foundationMaven != null ? foundationMaven : false
 
 def isComapiRelease = System.getenv("isparagonrelease")
 ext.isReleaseVersion = isComapiRelease != null ? isComapiRelease : false
-
-if (!isReleaseVersion) {
-    chatVersion = chatVersion + '-SNAPSHOT'
-}
 
 if (project.hasProperty("teamcity")) {
     ext.buildNumber = teamcity['build.number']
