audio recording ui

--- a/COMAPI/settings.gradle
+++ b/COMAPI/settings.gradle
@@ -1,1 +1,2 @@
-include ':chat'
+include ':foundation', ':chat'
+project(':foundation').projectDir = new File('/Users/marcinswierczek/GitHub/comapi-sdk-android/COMAPI/foundation')
