revert gradle change

--- a/COMAPI/settings.gradle
+++ b/COMAPI/settings.gradle
@@ -1,2 +1,1 @@
-include ':foundation', ':chat'
-project(':foundation').projectDir = new File('/Users/marcinswierczek/GitHub/comapi-sdk-android/COMAPI/foundation')
+include ':chat'
